# mearapport

./: .gitignore  README.md  basedb.json  mystorage.json  pyproject.toml  text.py
generated_docs/: base_new.json  basedb.json  basedb2.json
src/: allpath.py  androidapi.py  donnees.py  fletmap.py  main.py  myaction.py  rapport.db
src/screens/: screens.py
src/screens/acceuilscreen/: acceuilview.py
src/screens/aproposcreen/: apropoview.py
src/screens/archivescreen/: archiveview.py
src/screens/filtreouvragescreen/: filtreouvrageview.py
src/screens/infoscreen/: infoview.py
src/screens/intervaldatescreen/: intervaldateview.py  statdetailcontrol.py  statintervalcontrol.py
src/screens/localisationscreen/: localcard.py  localform.py  localisationview.py  localupdateform.py
src/screens/projetscreen/: projetcard.py  projetform.py  projetsview.py  projetupdateform.py
src/screens/rapportscreen/: rapportupdateform.py  rapportview.py
src/screens/recapouvragescreen/: localrecapcard.py  recapouvrageview.py
src/screens/settingscreen/: settingview.py
src/screens/statcantonscreen/: statanneecantoncontrol.py  statcantoncontrol.py  statcantonview.py
src/screens/statcommunescreen/: statanneecommunecontrol.py  statcommunecontrol.py  statcommuneview.py
src/screens/statgeneralscreen/: statanneecontrol.py  statgeneralcontrol.py  statgeneralview.py
src/screens/staticscreen/: statanneecantoncontrol.py  statcantoncontrol.py  statcommunecontrol.py  statgeneralcontrol.py  (+2 more)
src/uix/: custominputfield.py  custominputnumberfield.py  customtitlelabel.py  statbtncard.py
(+16 files in other folders)
